ENG-3459 Plugin update to recycle the previous schema + ENG-3446/ENG-3447